# Flash_Bot

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  debug.py  docker-compose.yml  flashbot.py  flashbot.service  main.py  pyproject.toml  requirements.txt  smoke_test.py
config/: firmware_manifest.json  sketch_scanner.py  sketch_watcher.py
detector/: device_id.py  usb_listener.py
files./: index.html
files./css/: flashbot.css
files./js/: flashbot.js
flasher/: __init__.py  arduino_flasher.py  base_flasher.py  esptool_flasher.py
logger/: reporter.py  result_store.py
pipeline/: state_machine.py
sketches/arduino/renesas_uno/unor4wifi/blink/: blink.ino
sketches/arduino/renesas_uno/unor4wifi/photoresistor/: photoresistor.ino
sketches/arduino/renesas_uno/unor4wifi/serial_test/: serial_test.ino
sketches/esp32/esp32/esp32/ESP_Weather_Forecast/: ESP_Weather_Forecast.ino
sketches/esp32/esp32/esp32/blink/: blink.ino
sketches/esp32/esp32/esp32/web_server/: web_server.ino
sketches/serial_test/: serial_test.ino
src/flashbot/: cli.py
src/flashbot/config/: firmware_manifest.json  sketch_watcher.py  unregistered_board.py  user_boards.json
src/flashbot/detector/: usb_listener.py
src/flashbot/flasher/: __init__.py  arduino_flasher.py  esptool_flasher.py
src/flashbot/logger/: reporter.py  result_store.py
src/flashbot/pipeline/: state_machine.py
src/flashbot/tester/: test_runner.py
src/flashbot/tools/: serial_monitor.py  serial_plotter.py
tester/: serial_comm.py  test_cases.py  test_runner.py
tools/: serial_base.py  serial_monitor.py
(+1 files in other folders)
