[project]
name = "flashbot"
version = "0.1.0"
description = "Automated embedded firmware development pipeline — detection, compilation, flashing, testing, and logging in one CLI tool."
authors = [
    {name = "Harsha685 harshavardhanchelluri@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "pyudev (>=0.24.4,<0.25.0)",
    "rich (>=15.0.0,<16.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "flashbot", from = "src" }]

[tool.poetry.scripts]
flashbot = "flashbot.cli:main"
